[package]
name = "vlsh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "gtk-layer-shell video wallpaper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.0.3"
