[package]
name = "vlsh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "gtk-layer-shell video wallpaper"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.0.3"

[build-dependencies]
built = { version = "0.6.1", features = ["git2"] }